--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,56 +19,52 @@
       height: 100vh;
       text-align: center;
       color: #333;
-    }h1 {
-  font-size: 2rem;
-  color: #444;
-  background: rgba(255, 255, 255, 0.7);
-  padding: 1rem;
-  border-radius: 10px;
-  margin-bottom: 2rem;
-}
-
-#countdown {
-  font-size: 1.5rem;
-  background: rgba(255, 255, 255, 0.6);
-  padding: 1rem 2rem;
-  border-radius: 10px;
-  color: #555;
-}
-
-audio {
-  display: none;
-}
-
+    }
+    h1 {
+      font-size: 2rem;
+      color: #444;
+      background: rgba(255, 255, 255, 0.7);
+      padding: 1rem;
+      border-radius: 10px;
+      margin-bottom: 2rem;
+    }
+    #countdown {
+      font-size: 1.5rem;
+      background: rgba(255, 255, 255, 0.6);
+      padding: 1rem 2rem;
+      border-radius: 10px;
+      color: #555;
+    }
+    audio {
+      display: none;
+    }
   </style>
 </head>
 <body>
   <h1>Ryzen Birthday Countdown</h1>
-  <div id="countdown">Loading countdown...</div>  <audio autoplay loop>
+  <div id="countdown">Loading countdown...</div>
+  <audio autoplay loop>
     <source src="rockstar.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
-  </audio>  <script>
+  </audio>
+  <script>
     const countdownElement = document.getElementById('countdown');
     const birthday = new Date('June 18, 2025 00:00:00 GMT+0100'); // UK time
-
     function updateCountdown() {
       const now = new Date();
       const diff = birthday - now;
-
       if (diff <= 0) {
         countdownElement.innerHTML = "Happy Birthday, Ryzen!";
         return;
       }
-
       const days = Math.floor(diff / (1000 * 60 * 60 * 24));
       const hours = Math.floor((diff / (1000 * 60 * 60)) % 24);
       const minutes = Math.floor((diff / (1000 * 60)) % 60);
       const seconds = Math.floor((diff / 1000) % 60);
-
       countdownElement.innerHTML = `${days} days ${hours} hours ${minutes} minutes ${seconds} seconds`;
     }
-
     updateCountdown();
     setInterval(updateCountdown, 1000);
-  </script></body>
+  </script>
+</body>
 </html>
